--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
     "axios": "^0.21.1",
+    "classnames": "^2.2.6",
     "dayjs": "^1.10.2",
     "jwt-decode": "^3.1.2",
     "react": "^17.0.1",
