--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "social-media-app-frontend",
   "version": "0.1.0",
+  "homepage": "https://chondan.github.io/Social-App-Frontend",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.2",
@@ -43,6 +44,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "proxy": "https://us-central1-social-media-app-a3e4f.cloudfunctions.net/api"
+  }
 }
